--- a/styles/style.css
+++ b/styles/style.css
@@ -7,41 +7,83 @@
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
+  display: flex;
 }
 
-.header {
+.page__header {
+  background-color: #f2f2f2;
   height: 100vh;
-  min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  min-height: 600px;
+  position: relative;
+  display: flex;
+  width: 1600px;
 }
 
-.logo {
+.header__logo {
+  margin-top: 0;
   text-align: center;
   white-space: nowrap;
   height: 32px;
   width: 228px; 
   position: absolute;
-  z-index: 1;
   top: 30px;
   left: 64px;
-  margin: 0 auto;
   border: 2px solid red;
 }
  .header__title {
+  flex-direction: column;
+  align-self: center;
+  margin-left: 64px;
+} 
+.header__h1 {
   font-weight: 600;
   line-height: 96px;
   font-size: 102px;
-  width: 730px; 
-  flex-direction: column;
-  display: flex;
-} 
-
+  hyphens: auto;
+  border: 2px solid red;
+  margin-top: 0px;
+  width: 751px;
+  margin-bottom: 0px;
+}
+.header__subtitle {
+  position: absolute;
+  bottom: 30px;
+  left: 64px;
+  width: 388px;
+}
+.header__subtitle-paragraph {
+  hyphens: auto;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  margin: 0;
+}
+.header__link-title {
+  text-decoration: none;
+}
+.header__main-ilustration {
+  border: solid 2px red;
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
+  z-index: 1;
+}
+.header__ilustration {
+  width: 765px;
+  height: 608px;
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-/*.header__square-pic {
+.header__square-pic {
+  display: block;
+  position: absolute;
+  top: 64px;
+  right: 0;
+  z-index: 0;
+  background-color: #2f80ed;
   height: 568px;
   width: 568px;
-} */
+} 
 
 /* и элемента с модификатором вида ключ-значение */
 /*.table__cell_theme_dark {
