--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,10 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
   display: flex;
-  flex-direction: column;
-}
+  flex-direction: column;}
 
 .page__header {
   background-color: #f2f2f2;
@@ -72,7 +67,6 @@
   width: 765px;
   height: 608px;
 }
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   display: block;
   position: absolute;
@@ -84,14 +78,15 @@
   width: 568px;
 } 
 .content {
+  display: flex;
+  justify-content: space-around;
 }
 
 .description {
-  margin: 0;
-  display: flex;
+  min-width: 784px;
   width: 80%;
   padding-top: 100px;
-  min-width: 784px;
+  display: flex;
 }
 .description__two-colums {
   min-width: 175px;
@@ -103,14 +98,29 @@
 }
 .description__h3 {
   margin: 0;
+  color: #2f80ed;
 }
 .description__main-text {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
-.description__main-text-paragrah {
-  margin-top: 0
+
+.description__main-text-paragrah-1 {
+  margin: 0;
+  padding-bottom: 30px;
+}
+.description__main-text-paragrah-3 {
+  margin: 0;
+  padding-top: 30px;
+}
+.description__main-text-paragrah-2 {
+  margin: 0;
+}
+.bold-word {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 600;
 }
 /* и элемента с модификатором вида ключ-значение */
 /*.table__cell_theme_dark {
