--- a/styles/style.css
+++ b/styles/style.css
@@ -79,17 +79,19 @@
 } 
 .content {
   display: flex;
-  justify-content: space-around;
-}
-
+  justify-content: center;
+} 
 .description {
   min-width: 784px;
   width: 80%;
   padding-top: 100px;
   display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 .description__two-colums {
-  min-width: 175px;
+  min-height: 400px;
+  display: flex;
 }
 .descriotion__two-colums-brief {
   line-height: 1.2;
@@ -99,13 +101,13 @@
 .description__h3 {
   margin: 0;
   color: #2f80ed;
+  width: 175px;
 }
 .description__main-text {
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
-
 .description__main-text-paragrah-1 {
   margin: 0;
   padding-bottom: 30px;
@@ -117,10 +119,191 @@
 .description__main-text-paragrah-2 {
   margin: 0;
 }
-.bold-word {
+.span-accent {
   font-size: 24px;
   line-height: 34px;
   font-weight: 600;
+}
+.digits {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+}
+.digits__header1 {
+  margin: 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+.digits__section-title {
+  padding-top: 100px;
+  width: 60%;
+  text-align: center;
+}
+.digits__section-subtitle {
+  text-align: center;
+  width: 60%;
+}
+.digits__header2 {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin-bottom: 60px;
+  margin-top: 20px;
+}
+.digits__table {
+  width: 1100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.digits__table-cell {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.digits__table-heading {
+  width: 250px;
+  margin-bottom: 60px;
+}
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
+.table__text-margin { 
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding-bottom: 20px;
+}
+.feynman {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  position: relative;
+  height: 890px;
+  background-color: #f2f2f2;
+}
+.feynman__header1 {
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 600;
+  margin-top: 0px;
+  margin-bottom: 70px;
+  width: 648px;
+  text-align: center;
+  margin-top: 100px;
+}
+.feynman__header2 {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  text-align: center;
+  margin: 0;
+}
+.feynman__title {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  z-index: 2;
+}
+.feynman__subtitle {
+  margin-top: 70px;
+  margin: 0;
+  z-index: 2;
+}
+.feynman__link {
+  position: absolute;
+  top: 50%;
+  right: 48px;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  z-index: 2;
+}
+.feynman__image {
+  z-index: 1;
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+.kaufman {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1f1f1f;
+  color: white;
+  overflow: hidden;
+}
+.kaufman__header1 {
+  margin: 0;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: 600;
+}
+.kaufman__section-title_theme_dark {
+  padding-top: 90px;
+  width: 60%;
+  text-align: center;
+}
+.kaufman__section-subtitle_theme_dark {
+  text-align: center;
+  width: 60%;
+}
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+.kaufman__header2 {
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: normal;
+  margin-bottom: 60px;
+  margin-top: 20px;
+}
+.kaufman__table_theme_dark {
+  width: 1100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.kaufman__table-cell_theme_dark {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.kaufman__table-heading_theme_dark {
+  width: 200px;
+  margin-bottom: 80px;
+}
+.table__heading_theme_dark {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 600;
+  padding-bottom: 20px;
+}
+.table__text-margin_theme_dark { 
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  padding-bottom: 20px;
 }
 /* и элемента с модификатором вида ключ-значение */
 /*.table__cell_theme_dark {
