--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ p {
   font-size: 102px;
   hyphens: auto;
   margin-top: 0px;
-  width: 751px;
+  width: 730px;
   margin-bottom: 0px;
 }
 .header__subtitle {
@@ -57,7 +57,7 @@ p {
   font-weight: normal;
   margin: 0;
 }
-.header__link-title {
+.header__link {
   text-decoration: none;
 }
 .header__main-ilustration {
@@ -93,10 +93,9 @@ p {
   justify-content: space-between;
 }
 .description__two-colums {
-  min-height: 400px;
   display: flex;
 }
-.description__two-colums-brief {
+.two-colums-brief {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
@@ -113,17 +112,10 @@ p {
   font-size: 24px;
   font-weight: normal;
 }
-.description__main-text-paragrah-1 {
+.description__main-text-paragraph {
   margin: 0;
-  padding-bottom: 30px;
-}
-.description__main-text-paragrah-3 {
-  margin: 0;
-  padding-top: 30px;
-}
-.description__main-text-paragrah-2 {
-  margin: 0;
-}
+  padding-bottom: 30px; }
+
 .span-accent {
   font-size: 24px;
   line-height: 34px;
@@ -193,7 +185,7 @@ p {
   flex-direction: column;
   margin-top: 100px;
   position: relative;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
 }
 .feynman__header1 {
@@ -317,6 +309,8 @@ p {
   background-color: #1f1f1f;
   color: white;
   justify-content: center;
+  box-sizing: content-box;
+  min-height: 350px;
 }
 .footer__columns-content-copyright {
   display: flex;
@@ -372,4 +366,5 @@ p {
   width: 16px;
   height: 16px;
   vertical-align: text-bottom;
+  padding-right: 10px;
 }       
