--- a/styles/style.css
+++ b/styles/style.css
@@ -1,383 +1,403 @@
 .page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
-  display: flex;
-  flex-direction: column;
+	min-width: 1100px;
+	max-width: 1600px;
+	margin: 0 auto;
+	font-family: 'Helvetica Neue', Arial, sans-serif;
+	display: flex;
+	flex-direction: column;
 }
 
 .header {
-  background-color: #f2f2f2;
-  height: 100vh;
-  max-height: 756px;
-  min-height: 600px;
-  position: relative;
-  display: flex;
-  width: 1600px;
+	background-color: #f2f2f2;
+	height: 100vh;
+	max-height: 756px;
+	min-height: 600px;
+	position: relative;
+	display: flex;
+	z-index: 2;
 }
 
-.header__logo {
-  margin-top: 0;
-  text-align: center;
-  white-space: nowrap;
-  height: 32px;
-  width: 228px;
-  position: absolute;
-  top: 30px;
-  left: 64px;
+.logo-place-header {
+	margin-top: 0;
+	text-align: center;
+	white-space: nowrap;
+	height: 32px;
+	width: 228px;
+	position: absolute;
+	top: 30px;
+	left: 64px;
 }
 
 .header__title {
-  flex-direction: column;
-  align-self: center;
-  margin-left: 64px;
-  font-weight: 600;
-  line-height: 96px;
-  font-size: 102px;
-  hyphens: auto;
-  margin-top: 0px;
-  width: 730px;
-  margin-bottom: 0px;
+	flex-direction: column;
+	align-self: center;
+	margin-left: 64px;
+	font-weight: 600;
+	line-height: 96px;
+	font-size: 102px;
+	hyphens: auto;
+	margin-top: 0px;
+	width: 730px;
+	margin-bottom: 0px;
 }
 
-.header__subtitle-paragraph {
-  hyphens: auto;
-  font-size: 18px;
-  line-height: 25px;
-  font-weight: normal;
-  margin: 0;
-  position: absolute;
-  bottom: 30px;
-  left: 64px;
-  width: 388px;
+.header__subtitle {
+	hyphens: auto;
+	font-size: 18px;
+	line-height: 25px;
+	font-weight: normal;
+	margin: 0;
+	position: absolute;
+	bottom: 30px;
+	left: 64px;
+	width: 388px;
 }
 
 .header__link {
-  text-decoration: none;
+	text-decoration: none;
+	color: #2f80ed;
 }
 
-.header__ilustration {
-  width: 765px;
-  height: 608px;
-  bottom: 0px;
-  right: 0px;
-  z-index: 1;
-  position: absolute;
+.header__main-ilustration {
+	width: 765px;
+	height: 608px;
+	bottom: 0px;
+	right: 0px;
+	z-index: 1;
+	position: absolute;
 }
 
 .header__square-pic {
-  display: block;
-  position: absolute;
-  top: 64px;
-  right: 0;
-  z-index: 0;
-  background-color: #2f80ed;
-  height: 568px;
-  width: 568px;
+	display: block;
+	position: absolute;
+	top: 64px;
+	right: 0;
+	z-index: 0;
+	background-color: #2f80ed;
+	height: 568px;
+	width: 568px;
 }
 
 .description {
-  min-width: 784px;
-  width: 80%;
-  padding-top: 100px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+	padding-top: 100px;
+	display: flex;
+	justify-content: space-around;
 }
 
-.two-colums {
-  display: flex;
+.two-columns {
+	display: flex;
+	justify-content: space-between;
+	min-width: 784px;
+	width: 80%;
 }
 
-.two-colums-brief {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  text-decoration: none;
-  margin: 0;
-  color: #2f80ed;
-  width: 175px;
+.two-columns__paragraph\:last-of-type {
+	margin: 0;
 }
 
-.description__main-text {
-  width: 80%;
-  line-height: 34px;
-  font-size: 24px;
-  font-weight: normal;
+.two-columns__brief-h2 {
+	line-height: 1.2;
+	font-size: 18px;
+	font-weight: normal;
+	text-decoration: none;
+	margin: 0;
+	color: #2f80ed;
+	width: 175px;
 }
 
-.description__main-text-paragraph {
-  margin: 0;
-  padding-bottom: 30px;
+.two-columns__main-text {
+	width: 80%;
+	line-height: 34px;
+	font-size: 24px;
+	font-weight: normal;
+	min-width: 784px;
 }
 
-.span-accent {
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: 600;
+.two-columns__paragraph {
+	margin: 0;
+	padding-bottom: 30px;
+}
+
+.two-columns__span-accent {
+	font-size: 24px;
+	line-height: 34px;
+	font-weight: 600;
 }
 
 .digits {
-  flex-direction: column;
-  display: flex;
-  align-items: center;
+	flex-direction: column;
+	display: flex;
+	align-items: center;
 }
 
 .section-title {
-  margin: 0;
-  font-size: 60px;
-  line-height: 1.15;
-  font-weight: 600;
-  padding-top: 70px;
-}
-
-.digits__title {
-  padding-top: 100px;
-  width: 60%;
-  text-align: center;
+	margin: 0;
+	font-size: 60px;
+	line-height: 1.15;
+	font-weight: 600;
+	padding-top: 70px;
+	padding-top: 100px;
+	width: 60%;
+	text-align: center;
 }
 
 .section-subtitle {
-  text-align: center;
-  width: 60%;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: normal;
-  margin-bottom: 60px;
-  margin-top: 20px;
+	text-align: center;
+	width: 60%;
+	font-size: 24px;
+	line-height: 34px;
+	font-weight: normal;
+	margin-bottom: 60px;
+	margin-top: 20px;
 }
 
 .table {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 1100px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 1100px;
+	z-index: 2;
 }
 
-.table-cell {
-  width: 250px;
-  margin-bottom: 60px;
-} 
+.table__cell {
+	width: 250px;
+	margin-bottom: 60px;
+	line-height: 1.2;
+	font-size: 18px;
+	font-weight: normal;
+}
 
 .table__heading {
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  padding-bottom: 20px;
+	line-height: 1.15;
+	font-size: 24px;
+	font-weight: 600;
+	padding-bottom: 20px;
 }
 
-.table__text-margin {  
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal; 
-} 
-
-.table__text { 
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  padding-bottom: 20px;
+.table__text {
+	margin-bottom: 20px;
 }
 
 .feynman {
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-  position: relative;
-  min-height: 890px;
-  background-color: #f2f2f2;
-  align-items: center;
+	display: flex;
+	flex-direction: column;
+	margin-top: 100px;
+	position: relative;
+	min-height: 890px;
+	background-color: #f2f2f2;
+	align-items: center;
 }
 
 .feynman__title {
-  z-index: 2;
-  line-height: 1.15;
-  font-size: 120px;
-  font-weight: 600;
-  margin-bottom: 70px;
-  width: 648px;
-  text-align: center;
-  margin-top: 100px;
+	z-index: 3;
+	line-height: 1.15;
+	font-size: 120px;
+	font-weight: 600;
+	margin-bottom: 70px;
+	width: 648px;
+	text-align: center;
+	margin-top: 100px;
 }
 
 .feynman__subtitle {
-  margin-top: 70px;
-  margin: 0;
-  z-index: 2;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  text-align: center;
+	margin: 0;
+	z-index: 2;
+	line-height: 51px;
+	font-size: 36px;
+	font-weight: normal;
+	text-align: center;
 }
 
 .feynman__link {
-  position: absolute;
-  top: 50%;
-  right: 48px;
-  line-height: 51px;
-  font-size: 36px;
-  font-weight: normal;
-  z-index: 2;
+	position: absolute;
+	top: 50%;
+	right: 48px;
+	line-height: 51px;
+	font-size: 36px;
+	font-weight: normal;
+	z-index: 2;
+	color: #2f80ed;
+	text-decoration: none;
 }
 
 .feynman__image {
-  z-index: 1;
-  width: 867px;
-  height: 637px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
+	z-index: 1;
+	width: 867px;
+	height: 637px;
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
 
 .kaufman {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #1f1f1f;
-  color: white;
-  overflow: hidden;
-  position: relative;
-  padding-bottom: 90px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #1f1f1f;
+	color: white;
+	overflow: hidden;
+	position: relative;
+	padding-bottom: 90px;
 }
 
-.kaufman__theme-dark {
-  padding-top: 90px;
-  width: 60%;
-  text-align: center;
-  margin: 0;
-  font-size: 60px;
-  line-height: 1.15;
-  font-weight: 600;
+.section-title-theme-dark {
+	padding-top: 90px;
+	width: 60%;
+	text-align: center;
+	margin: 0;
+	font-size: 60px;
+	line-height: 1.15;
+	font-weight: 600;
+	z-index: 3;
 }
 
-.kaufman__subtitle-theme-dark {
-  text-align: center;
-  width: 60%;
-  font-size: 24px;
-  line-height: 34px;
-  font-weight: normal;
-  margin-bottom: 60px;
-  margin-top: 20px;
+.section-subtitle-theme-dark {
+	text-align: center;
+	width: 60%;
+	font-size: 24px;
+	line-height: 34px;
+	font-weight: normal;
+	margin-bottom: 60px;
+	margin-top: 20px;
+	z-index: 2;
 }
 
 .kaufman__triangle {
-  width: 877px;
-  height: 877px;
-  position: absolute;
-  right: -210px;
-  background-image: url(../images/logo/kaufman-triangle.svg);
-  background-position: top;
-  background-size: 877px 877px;
+	width: 877px;
+	height: 877px;
+	position: absolute;
+	right: -210px;
+	background-image: url(../images/logo/kaufman-triangle.svg);
+	background-position: top;
+	background-size: 877px 877px;
+	z-index: 0;
 }
 
 .table-theme-dark {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  width: 1100px;
-  z-index: 2;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 1100px;
+	z-index: 2;
 }
 
-.table-theme-dark__cell {
-  width: 200px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  padding-bottom: 20px;
+.table__cell-theme-dark {
+	width: 200px;
+	line-height: 1.15;
+	font-size: 24px;
+	font-weight: 600;
+	padding-bottom: 20px;
 }
 
-.table-theme-dark__heading {
-  width: 200px;
-  line-height: 1.15;
-  font-size: 24px;
-  font-weight: 600;
-  padding-bottom: 20px;
+.table__heading-theme-dark {
+	width: 200px;
+	line-height: 1.15;
+	font-size: 24px;
+	font-weight: 600;
+	padding-bottom: 20px;
+	margin: 0px;
 }
 
-.table-theme-dark__text {
-  line-height: 1.2;
-  font-size: 18px;
-  font-weight: normal;
-  padding-bottom: 80px;
+.table__text-theme-dark {
+	line-height: 1.2;
+	font-size: 18px;
+	font-weight: normal;
+	padding-bottom: 80px;
+	margin: 0px;
 }
 
 .footer {
-  display: flex;
-  background-color: #1f1f1f;
-  color: white;
-  justify-content: center;
-  min-height: 350px;
-  box-sizing: border-box;
-}
-
-.footer__column-content-copyright {
-  display: flex;
-  flex-basis: 711px;
-  align-items: flex-start;
-  align-content: flex-start;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.footer__column-heading {
-  display: flex;
-  flex-direction: column;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: 600;
-  margin-top: 0px;
-  margin-bottom: 20px;
-}
-
-.footer__column-content-social {
-  display: flex;
-  flex-direction: column;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-}
-
-.footer__column-content-info {
-  display: flex;
-  flex-wrap: wrap;
-  line-height: 30px;
-  font-size: 18px;
-  font-weight: normal;
-  flex-direction: column;
+	min-height: 350px;
+	padding: 60px 0 40px;
+	box-sizing: border-box;
+	background: #1F1F1F;
+	color: #fff;
+	display: flex;
+	justify-content: center;
 }
 
 .footer__columns {
-  width: 90%;
-  display: flex;
-  min-height: 350px;
-  justify-content: space-between;
+	width: 90%;
+	margin: 0 auto 0 auto;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
 }
 
-.footer__place-logo {
-  margin: 0;
-  height: 32px;
-  width: 228px;
+.footer__column_content_copyright {
+	flex-basis: 711px;
+	flex-direction: column;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 0;
+	margin-bottom: 0;
 }
 
-.footer__column-links {
-  list-style-type: none;
-  display: flex;
-  flex-direction: column;
+.footer__column_content_social {
+	padding-top: 0;
+	padding-bottom: 0;
+	flex-direction: column;
+	justify-content: flex-start;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.logo_place_footer {
+	width: 228px;
+	height: 32px;
+	background-size: contain;
+	background-repeat: no-repeat;
 }
 
 .footer__author {
-  margin-top: 18px;
-  margin-bottom: 18px;
-  line-height: 25px;
-  font-size: 18px;
-  font-weight: normal;
+	display: flex;
+	align-items: flex-end;
+	line-height: 25px;
+	font-size: 18px;
+	font-weight: normal;
+	margin-bottom: 18px;
+}
+
+.footer__column_content_info {
+	padding-top: 0;
+	padding-bottom: 0;
+	margin-top: 0;
+	margin-bottom: 0;
+	flex-direction: column;
+	justify-content: flex-start;
+}
+
+.footer__column-heading {
+	line-height: 30px;
+	font-size: 18px;
+	font-weight: 600px;
+	margin-top: 0;
+	margin-bottom: 0;
+}
+
+.footer__column-links {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	list-style-type: none;
+	line-height: 30px;
+	font-size: 18px;
+	font-weight: normal;
+	margin-top: 20px;
+	margin-bottom: 16px;
+}
+
+.footer__column-link {
+	text-decoration: none;
+	line-height: 30px;
+	color: #F2F2F2;
+	font-size: 18px;
+	font-weight: normal;
+
 }
 
 .footer__social-icon {
-  width: 16px;
-  height: 16px;
-  vertical-align: text-bottom;
-  padding-right: 10px;
+	width: 16px;
+	height: 16px;
+	margin-right: 10px;
 }
