--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,9 @@
 	font-family: 'Helvetica Neue', Arial, sans-serif;
 	display: flex;
 	flex-direction: column;
-}
-
-.header {
+  }
+  
+  .header {
 	background-color: #f2f2f2;
 	height: 100vh;
 	max-height: 756px;
@@ -15,9 +15,9 @@
 	position: relative;
 	display: flex;
 	z-index: 2;
-}
-
-.logo-place-header {
+  }
+  
+  .logo_place_header {
 	margin-top: 0;
 	text-align: center;
 	white-space: nowrap;
@@ -26,9 +26,9 @@
 	position: absolute;
 	top: 30px;
 	left: 64px;
-}
-
-.header__title {
+  }
+  
+  .header__title {
 	flex-direction: column;
 	align-self: center;
 	margin-left: 64px;
@@ -39,9 +39,10 @@
 	margin-top: 0px;
 	width: 730px;
 	margin-bottom: 0px;
-}
-
-.header__subtitle {
+	z-index: 3;
+  }
+  
+  .header__subtitle {
 	hyphens: auto;
 	font-size: 18px;
 	line-height: 25px;
@@ -51,23 +52,24 @@
 	bottom: 30px;
 	left: 64px;
 	width: 388px;
-}
-
-.header__link {
+  }
+  
+  .header__link {
 	text-decoration: none;
 	color: #2f80ed;
-}
-
-.header__main-ilustration {
+  }
+  
+  .header__main-ilustration {
 	width: 765px;
 	height: 608px;
 	bottom: 0px;
 	right: 0px;
 	z-index: 1;
 	position: absolute;
-}
-
-.header__square-pic {
+	object-fit: cover;
+  }
+  
+  .header__square-pic {
 	display: block;
 	position: absolute;
 	top: 64px;
@@ -76,26 +78,21 @@
 	background-color: #2f80ed;
 	height: 568px;
 	width: 568px;
-}
-
-.description {
+  }
+  
+  .description {
 	padding-top: 100px;
 	display: flex;
 	justify-content: space-around;
-}
-
-.two-columns {
+  }
+  
+  .two-columns {
 	display: flex;
 	justify-content: space-between;
-	min-width: 784px;
 	width: 80%;
-}
-
-.two-columns__paragraph\:last-of-type {
-	margin: 0;
-}
-
-.two-columns__brief-h2 {
+  }
+  
+  .two-columns__brief {
 	line-height: 1.2;
 	font-size: 18px;
 	font-weight: normal;
@@ -103,34 +100,38 @@
 	margin: 0;
 	color: #2f80ed;
 	width: 175px;
-}
-
-.two-columns__main-text {
+  }
+  
+  .two-columns__main-text {
 	width: 80%;
 	line-height: 34px;
 	font-size: 24px;
 	font-weight: normal;
 	min-width: 784px;
-}
-
-.two-columns__paragraph {
+  }
+  
+  .two-columns__paragraph {
 	margin: 0;
 	padding-bottom: 30px;
-}
-
-.two-columns__span-accent {
+  }
+  
+  .two-columns__paragraph:last-of-type {
+	padding: 0;
+  }
+  
+  .two-columns__span-accent {
 	font-size: 24px;
 	line-height: 34px;
 	font-weight: 600;
-}
-
-.digits {
+  }
+  
+  .digits {
 	flex-direction: column;
 	display: flex;
 	align-items: center;
-}
-
-.section-title {
+  }
+  
+  .section-title {
 	margin: 0;
 	font-size: 60px;
 	line-height: 1.15;
@@ -139,9 +140,9 @@
 	padding-top: 100px;
 	width: 60%;
 	text-align: center;
-}
-
-.section-subtitle {
+  }
+  
+  .section-subtitle {
 	text-align: center;
 	width: 60%;
 	font-size: 24px;
@@ -149,36 +150,42 @@
 	font-weight: normal;
 	margin-bottom: 60px;
 	margin-top: 20px;
-}
-
-.table {
+  }
+  
+  .table {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	width: 1100px;
 	z-index: 2;
-}
-
-.table__cell {
+  }
+  
+  .table__cell {
 	width: 250px;
 	margin-bottom: 60px;
 	line-height: 1.2;
 	font-size: 18px;
 	font-weight: normal;
-}
-
-.table__heading {
+  }
+  
+  .table__heading {
 	line-height: 1.15;
 	font-size: 24px;
 	font-weight: 600;
 	padding-bottom: 20px;
-}
-
-.table__text {
-	margin-bottom: 20px;
-}
-
-.feynman {
+	margin: 0;
+  }
+  
+  .table__text {
+	margin: 0;
+	padding-bottom: 20px;
+  }
+  
+  .table__text:last-of-type {
+	padding-bottom: 0px;
+  }
+  
+  .feynman {
 	display: flex;
 	flex-direction: column;
 	margin-top: 100px;
@@ -186,9 +193,9 @@
 	min-height: 890px;
 	background-color: #f2f2f2;
 	align-items: center;
-}
-
-.feynman__title {
+  }
+  
+  .feynman__title {
 	z-index: 3;
 	line-height: 1.15;
 	font-size: 120px;
@@ -197,18 +204,18 @@
 	width: 648px;
 	text-align: center;
 	margin-top: 100px;
-}
-
-.feynman__subtitle {
+  }
+  
+  .feynman__subtitle {
 	margin: 0;
 	z-index: 2;
 	line-height: 51px;
 	font-size: 36px;
 	font-weight: normal;
 	text-align: center;
-}
-
-.feynman__link {
+  }
+  
+  .feynman__link {
 	position: absolute;
 	top: 50%;
 	right: 48px;
@@ -218,18 +225,18 @@
 	z-index: 2;
 	color: #2f80ed;
 	text-decoration: none;
-}
-
-.feynman__image {
+  }
+  
+  .feynman__image {
 	z-index: 1;
 	width: 867px;
 	height: 637px;
 	position: absolute;
 	left: 0;
 	bottom: 0;
-}
-
-.kaufman {
+  }
+  
+  .kaufman {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -238,9 +245,9 @@
 	overflow: hidden;
 	position: relative;
 	padding-bottom: 90px;
-}
-
-.section-title-theme-dark {
+  }
+  
+  .section-title_theme_dark {
 	padding-top: 90px;
 	width: 60%;
 	text-align: center;
@@ -249,9 +256,10 @@
 	line-height: 1.15;
 	font-weight: 600;
 	z-index: 3;
-}
-
-.section-subtitle-theme-dark {
+	padding-bottom: 20px;
+  }
+  
+  .section-subtitle_theme_dark {
 	text-align: center;
 	width: 60%;
 	font-size: 24px;
@@ -260,9 +268,9 @@
 	margin-bottom: 60px;
 	margin-top: 20px;
 	z-index: 2;
-}
-
-.kaufman__triangle {
+  }
+  
+  .kaufman__triangle {
 	width: 877px;
 	height: 877px;
 	position: absolute;
@@ -271,42 +279,40 @@
 	background-position: top;
 	background-size: 877px 877px;
 	z-index: 0;
-}
-
-.table-theme-dark {
+  }
+  
+  .table_theme_dark {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
 	width: 1100px;
 	z-index: 2;
-}
-
-.table__cell-theme-dark {
+  }
+  
+  .table__cell_theme_dark {
 	width: 200px;
 	line-height: 1.15;
 	font-size: 24px;
 	font-weight: 600;
-	padding-bottom: 20px;
-}
-
-.table__heading-theme-dark {
+	margin: 0;
+  }
+  
+  .table__heading_theme_dark {
 	width: 200px;
 	line-height: 1.15;
 	font-size: 24px;
 	font-weight: 600;
-	padding-bottom: 20px;
 	margin: 0px;
-}
-
-.table__text-theme-dark {
+  }
+  
+  .table__text_theme_dark {
 	line-height: 1.2;
 	font-size: 18px;
 	font-weight: normal;
-	padding-bottom: 80px;
-	margin: 0px;
-}
-
-.footer {
+	margin-bottom: 80px;
+  }
+  
+  .footer {
 	min-height: 350px;
 	padding: 60px 0 40px;
 	box-sizing: border-box;
@@ -314,68 +320,66 @@
 	color: #fff;
 	display: flex;
 	justify-content: center;
-}
-
-.footer__columns {
+  }
+  
+  .footer__columns {
 	width: 90%;
 	margin: 0 auto 0 auto;
 	display: flex;
 	justify-content: space-between;
 	flex-wrap: wrap;
-}
-
-.footer__column_content_copyright {
+  }
+  
+  .footer__column_content_copyright {
 	flex-basis: 711px;
 	flex-direction: column;
 	display: flex;
 	justify-content: space-between;
 	margin-top: 0;
 	margin-bottom: 0;
-}
-
-.footer__column_content_social {
+  }
+  
+  .footer__column_content_social {
 	padding-top: 0;
 	padding-bottom: 0;
 	flex-direction: column;
 	justify-content: flex-start;
 	margin-top: 0;
 	margin-bottom: 0;
-}
-
-.logo_place_footer {
+  }
+  
+  .logo_place_footer {
 	width: 228px;
-	height: 32px;
-	background-size: contain;
 	background-repeat: no-repeat;
-}
-
-.footer__author {
+  }
+  
+  .footer__author {
 	display: flex;
 	align-items: flex-end;
 	line-height: 25px;
 	font-size: 18px;
 	font-weight: normal;
 	margin-bottom: 18px;
-}
-
-.footer__column_content_info {
+  }
+  
+  .footer__column_content_info {
 	padding-top: 0;
 	padding-bottom: 0;
 	margin-top: 0;
 	margin-bottom: 0;
 	flex-direction: column;
 	justify-content: flex-start;
-}
-
-.footer__column-heading {
+  }
+  
+  .footer__column-heading {
 	line-height: 30px;
 	font-size: 18px;
-	font-weight: 600px;
+	font-weight: 600;
 	margin-top: 0;
 	margin-bottom: 0;
-}
-
-.footer__column-links {
+  }
+  
+  .footer__column-links {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-start;
@@ -385,19 +389,19 @@
 	font-weight: normal;
 	margin-top: 20px;
 	margin-bottom: 16px;
-}
-
-.footer__column-link {
+  }
+  
+  .footer__column-link {
 	text-decoration: none;
 	line-height: 30px;
 	color: #F2F2F2;
 	font-size: 18px;
 	font-weight: normal;
-
-}
-
-.footer__social-icon {
+  
+  }
+  
+  .footer__social-icon {
 	width: 16px;
 	height: 16px;
 	margin-right: 10px;
-}
+  }
