--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@
 	font-size: 24px;
 	line-height: 34px;
 	font-weight: normal;
-	margin-bottom: 60px;
+	margin-bottom: 0px;
 	margin-top: 20px;
   }
   
@@ -167,6 +167,7 @@
 	line-height: 1.2;
 	font-size: 18px;
 	font-weight: normal;
+  padding-top: 60px;
   }
   
   .table__heading {
@@ -257,7 +258,7 @@
 	line-height: 1.15;
 	font-weight: 600;
 	z-index: 3;
-	padding-bottom: 20px;
+	padding-bottom: 0px;
   }
   
   .section-subtitle_theme_dark {
@@ -280,7 +281,7 @@
 	background-position: top;
 	background-size: 877px 877px;
 	z-index: 0;
-	left: auto;
+	top: auto;
   }
   
   .table_theme_dark {
@@ -353,7 +354,6 @@
   .logo_place_footer {
 	width: 228px;
 	height: 32px;
-	background-size: contain;
   }
   
   .footer__author {
@@ -398,7 +398,7 @@
   .footer__column-link {
 	text-decoration: none;
 	line-height: 30px;
-	color: #F2F2F2;
+	color: #fff;
 	font-size: 18px;
 	font-weight: normal;
   
