--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(/normalize.css);
+@import url(../vendor/normalize.css);
 @import url(../blocks/cards/__description/cards__description.css);
 @import url(../blocks/cards/__images/cards__images.css);
 @import url(../blocks/cards/__item/cards__item.css);
@@ -65,6 +65,6 @@
 @import url(../blocks/two-columns/__span-accent/two-columns__span-accent.css);
 @import url(../blocks/two-columns/two-columns.css);
 @import url(../blocks/video/__iframes/video__iframes.css);
-@import url(../blocks/video/__iframe/iframe.css);
+@import url(../blocks/video/__iframe/video__iframe.css);
 @import url(../blocks/video/video.css);
 @import url(../blocks/rotation/rotation.css);
