--- a/blocks/rotation/rotation.css
+++ b/blocks/rotation/rotation.css
@@ -2,3 +2,7 @@
   from {transform:rotate(0deg);}
   to {transform:rotate(360deg);}
 }
+.rotation
+{
+  animation: rotation 20s linear 0s infinite;
+}
