--- a/blocks/digits/digits.css
+++ b/blocks/digits/digits.css
@@ -2,5 +2,6 @@
   flex-direction: column;
   display: flex;
   align-items: center;
-  margin-bottom: 100px;
+  margin-top: 100px;
+  padding-bottom: 100px;
   }
